# gl-c-cpp-basecamp-2021-2

./: .gitignore  CMakeLists.txt  PlatformConfig.hpp.in  README.md  WBS.txt  run.bat  runc.bat  runs.bat
01_network_sysapi/: .gitignore  CMakeLists.txt  README.md  WBS.md  WBS.txt  netApi.hpp  netApiWin.cpp
01_network_sysapi/Client/: main.cpp
01_network_sysapi/Client-Server_Mouse_check_app/: CMakeLists.txt
01_network_sysapi/Client-Server_Mouse_check_app/client/: CMakeLists.txt  main.cpp
01_network_sysapi/Client-Server_Mouse_check_app/server/: CMakeLists.txt  main.cpp
01_network_sysapi/Messenger/: CMakeLists.txt
01_network_sysapi/Messenger/MessengerClient/: CMakeLists.txt  MessengerClient.cpp
01_network_sysapi/Messenger/MessengerNetworking/: CMakeLists.txt
01_network_sysapi/Messenger/MessengerServer/: CMakeLists.txt  MessengerServer.cpp
01_network_sysapi/Network_Client/: Client.cpp  main.cpp
01_network_sysapi/Network_Server/: Server.cpp  main.cpp
01_network_sysapi/Server/: main.cpp  timer.cpp  timer.h
01_network_sysapi/TCP/Src/: TcpClient.cpp  TcpServer.cpp
01_network_sysapi/TCP/hdr/: TcpClient.h  TcpServer.h  general.h
01_network_sysapi/client/: CMakeLists.txt  client.cpp  transferDataClient.cpp  transferDataClient.hpp
01_network_sysapi/gl_networking/: gl_networking.sln
01_network_sysapi/gl_networking/gl_client/: Source.cpp  gl_client.vcxproj
01_network_sysapi/gl_networking/gl_networking/: IPEndPoint.cpp  IPEndPoint.h  IPVersion.h  Includes.h  MySocket.cpp  MySocket.h  Network.cpp  Network.h  Packet.cpp  Packet.h  PacketType.h  Result.h  SocketHandle.h  SocketOption.h  gl_networking.vcxproj  gl_networking.vcxproj.filters
01_network_sysapi/gl_networking/gl_server/: Source.cpp  gl_server.vcxproj
01_network_sysapi/headers/: CMakeLists.txt  header.cpp  header.hpp
01_network_sysapi/multithread/: CMakeLists.txt  threadGuard.hpp  threadSafeQueue.hpp
01_network_sysapi/network/: CMakeLists.txt  guardAddrinfo.cpp  guardAddrinfo.hpp  mySocket.cpp  mySocket.hpp  network.hpp  networkDefine.hpp  networkWin.cpp
01_network_sysapi/networkApi/: CMakeLists.txt  netApi.hpp  netApiWin.cpp
01_network_sysapi/server/: CMakeLists.txt  server.cpp  transferDataServer.cpp  transferDataServer.hpp
01_network_sysapi/src/: CMakeLists.txt
01_network_sysapi/src/gl_client/: Source.cpp
01_network_sysapi/src/gl_networking/: IPEndPoint.cpp  IPEndPoint.h  IPVersion.h  Includes.h  MySocket.cpp  MySocket.h  Network.cpp  Network.h  Packet.cpp  Packet.h  PacketType.h  Result.h  SocketHandle.h  SocketOption.h  WinToUNIXtypedefs.h
01_network_sysapi/src/gl_server/: Source.cpp
01_network_sysapi/src/gl_sysapi/: ProcessHandle.h  ProcessManager.cpp  ProcessManager.h
01_network_sysapi/systemApi/: CMakeLists.txt
01_network_sysapi/task-09/: .gitignore  README.md  WBS.md
01_network_sysapi/task-1_09/: README.md  WBS.md
01_network_sysapi/utility/: CMakeLists.txt  appExecutionTimer.hpp  transferUtiltiy.cpp  transferUtiltiy.hpp
02_oop/: #TODO.txt  .gitignore  CMakeLists.txt  Documentation GL_TASK_1.docx  Documentation TASK_2.docx  ForTst1.txt  ForTst2.txt  ForTst3.txt  README.md  UML.drawio  WBS.md  WBS.txt
02_oop/Doc/: WBS.md
02_oop/GL_TASK_2/: GL_TASK_2.pro  mainwindow.cpp  mainwindow.h  settingsSave.txt
02_oop/Global_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
02_oop/JSON_Editor/: CMakeLists.txt  aboutdialog.ui  cabout.cpp  cabout.h  cclose.cpp  cclose.h  cnew.cpp  cnew.h  command.h  copen.cpp  copen.h  cquit.cpp  cquit.h  csave.cpp  csave.h  finddialog.cpp  finddialog.h  finddialog.ui  invoker.cpp  invoker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  savechanges.cpp  savechanges.h  validator.cpp  validator.h
02_oop/Secure_Storage_Applications/: CMakeLists.txt  Secure_Storage_Applications.pro  encdec.cpp  encdec.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordwindow.cpp  passwordwindow.h  passwordwindow.ui
02_oop/Src/: CMakeLists.txt  mainwindow.ui
02_oop/Task-2_09/Doc/: WBS.md
02_oop/Task-2_09/Src/: mainwindow.cpp  mainwindow.h
02_oop/build-GL_TASK_2-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
02_oop/build-GL_TASK_2-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
02_oop/build-Secure_Storage_Applications-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  passwords.txt  ui_mainwindow.h  ui_passwordwindow.h
02_oop/build-Secure_Storage_Applications-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_passwordwindow.cpp
02_oop/docs/diagrams/: Class.drawio  Sequence.drawio  UseCase.drawio
02_oop/gl_oop/: CMakeLists.txt  elementtype.h  graphicselement.cpp  graphicselement.h  grid.cpp  grid.h  logicelement.cpp  logicelement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene.cpp  scene.h  workspace.cpp  workspace.h
02_oop/src/: id3reader.cpp  id3reader.hpp  main.cpp
02_oop/transferBigData/: CMakeLists.txt  appExecutionTimer.hpp  connection.cpp  connection.hpp  packet.hpp  threadGuard.hpp  threadSafeQueue.hpp
03_qt_git/: .gitignore  CMakeLists.txt  README.md  WBS.md  WBS.txt
03_qt_git/Doc/: WBS.md
03_qt_git/Gui_Git_Client/: mainwindow.cpp  mainwindow.h  mainwindow.ui
03_qt_git/src/: cloneRepoDialog.cpp  cloneRepoDialog.hpp  editGitWindow.cpp  editGitWindow.hpp  gitObjects.cpp  gitObjects.hpp  gitRepository.cpp  gitRepository.hpp  gitapi.cpp  gitapi.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  modelBranchList.cpp  modelBranchList.hpp  modelCommitTree.cpp  modelCommitTree.hpp  process.cpp  process.hpp  startWindow.cpp  startWindow.hpp  treeCommitNode.cpp  treeCommitNode.hpp  utility.cpp  utility.hpp  viewGitWindow.cpp  viewGitWindow.hpp
04_utility/: CMakeLists.txt  (+2 more)
transferBigData/client/: CMakeLists.txt  Client_TransferBigData.cpp
transferBigData/server/: CMakeLists.txt  Server_TransferBigData.cpp
transferBigDataAPP/client/: CMakeLists.txt  client.cpp  transferDataClient.cpp  transferDataClient.hpp
transferBigDataAPP/server/: CMakeLists.txt  server.cpp  transferDataServer.cpp  transferDataServer.hpp
(+116 files in other folders)
